--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@300&family=Satisfy&family=Smooch&family=Zeyada&display=swap" rel="stylesheet">
-	
+	<link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@300;400&family=Satisfy&family=Smooch&family=Zeyada&display=swap" rel="stylesheet">
+
+	<!-- Bootstrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
